# slipstream

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.junie/: guidelines.md
docs/: slipstream-prd.md
examples/: count_token.py  extract_receipt_example.py
plans/: 2512.0001_url_parser.md  2512.0002_gdrive_read_download.md  2512.0003_cli_tool_for_read_gdrive.md  2512.0004_gdrive_process_integration_test.md  2512.0005_add_ocr.md  2512.0005_add_ocr_module.md  2512.0006_anthropic_api_integration.md  2512.0007_integrate_anthropic_extractor.md  2512.0008_enhance_gdrive_download_performance.md  2512.0009_implemnt_streaming_workflow.md  2512.0010_implement_google_sheet_module.md  2512.0011_add_local_file_export.md  2512.0012_add_image_link_ref.md
prompts/: extractor_system.jinja2  extractor_user.jinja2
src/slipstream/: __init__.py  main.py  models.py
src/slipstream/integrations/: __init__.py  anthropic_extractor.py  gdrive.py  gsheets.py  local_export.py  ocr.py
src/slipstream/utils/: url_parser.py
tests/: test_basic.py  test_cli.py  test_gdrive.py  test_url_parser.py  utils.py
tests/integration/: README.md  test_cli_workflow.py  test_gdrive_download.py  test_integration_gdrive.py  test_vision_api.py  utils.py
tests/unit/: test_anthropic_extractor.py  test_cli.py  test_cli_local_export.py  test_gdrive.py  test_gdrive_lazy_init.py  test_gdrive_parallel.py  test_gsheets_error_handling.py  test_gsheets_lazy_init.py  test_gsheets_mapping.py  test_gsheets_write.py  test_local_export.py  test_models.py  test_ocr_engine.py  test_pipeline_local_export.py  test_pipeline_parallel.py  test_pipeline_refactor.py  test_url_parser.py
