[project]
name = "slipstream"
version = "0.1.0"
description = "CLI tool to automate receipt processing from Google Drive to Google Sheets using AI"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "google-cloud-vision>=3.11.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "typer>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/pingeplin/slipstream"
Repository = "https://github.com/pingeplin/slipstream.git"
Issues = "https://github.com/pingeplin/slipstream/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.15.0",
    "ruff>=0.9.1",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "PT", # flake8-pytest-style
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "ARG", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (select with '-m integration')",
    "unit: marks tests as unit tests (select with '-m unit')",
    "slow: marks tests as slow-running tests (select with '-m slow')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
slipstream = "slipstream.main:main"
